[package]
name = "axum-limit"
version = "0.1.0-alpha.2"
description = "A rate limiting library using token buckets, centered around extractor-based limits for async web applications."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-limit"
repository = "https://github.com/gengteng/axum-limit"
documentation = "https://docs.rs/axum-limit"
keywords = [
    "axum",
    "limit",
    "extractor",
    "rate",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum-core = "0.5.0"
dashmap = "6.0.1"
http = "1.1.0"


[dev-dependencies]
anyhow = "1.0.82"
axum = "0.8.1"
futures = "0.3.30"
axum-test = "17.2.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.198", features = ["derive"] }
http = "1.1.0"
