[package]
name = "axum-limit"
version = "0.2.0-alpha.2"
description = "Production-oriented rate limiting for Axum via extractors, with pluggable algorithms and storage backends."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-limit"
repository = "https://github.com/gengteng/axum-limit"
documentation = "https://docs.rs/axum-limit"
keywords = [
    "axum",
    "limit",
    "extractor",
    "rate",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]

[dependencies]
async-trait = "0.1.80"
axum-core = "0.4.3"
dashmap = "6.0.1"
http = "1.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.128"
redis = { version = "0.27.6", optional = true, default-features = false, features = ["tokio-comp"] }
tokio = { version = "1.37.0", features = ["time"] }

[dev-dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
futures = "0.3.30"
axum-test = "15.6.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.198", features = ["derive"] }
http = "1.1.0"
proptest = "=1.5.0"
