[package]
name = "axum-limit"
version = "0.2.0-alpha.3"
description = "Production-oriented rate limiting for Axum via extractors, with pluggable algorithms and storage backends."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-limit"
repository = "https://github.com/gengteng/axum-limit"
documentation = "https://docs.rs/axum-limit"
keywords = [
    "axum",
    "limit",
    "extractor",
    "rate",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"
rust-version = "1.88"

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]

[dependencies]
async-trait = "0.1.89"
axum-core = "0.5.6"
dashmap = "6.0.1"
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
redis = { version = "1.3.0", optional = true, default-features = false, features = ["tokio-comp"] }
tokio = { version = "1.52.3", features = ["time"] }

[dev-dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
futures = "0.3.32"
axum-test = "21.0.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
http = "1.4.2"
proptest = "1.11.0"
